# AlphaCota

./: .env.example  .gitignore  .mcp.json  AGENTS.md  AGENTS.override.md  CLAUDE.md  CODEX.md  GEMINI.md  README.md  alphacota.db  cli.py  gemini-extension.json  pyproject.toml  requirements-dev.txt  requirements.txt  start.py
.claude/: settings.json
.data/: ADAUSDT_15m.parquet  AVAXUSDT_15m.parquet  BNBUSDT_15m.parquet  BTCUSDT_15m.parquet  DOGEUSDT_15m.parquet  DOTUSDT_15m.parquet  ETHUSDT_15m.parquet  LINKUSDT_15m.parquet  SOLUSDT_15m.parquet  UNIUSDT_15m.parquet  XRPUSDT_15m.parquet
.models/: crypto_lgbm_meta.json
.rulebook/: rulebook.json
alphacota_mcp/: __init__.py
api/: db_sqlite.py  main.py
core/: ai_cache.py  ai_engine.py  audit_log.py  backtest_engine.py  class_rebalancer.py  cluster_engine.py  config.py  correlation_engine.py  crypto_chart_engine.py  crypto_data_collector.py  crypto_data_engine.py  crypto_executor.py  crypto_feedback_trainer.py  crypto_indicators.py  crypto_ledger.py  crypto_live_executor.py  crypto_loop.py  crypto_ml_features.py  crypto_ml_model.py  crypto_news_engine.py  crypto_onchain_engine.py  crypto_risk_engine.py  crypto_signal_engine.py  crypto_sizing_engine.py  crypto_strategy_engine.py  crypto_telegram.py  crypto_types.py  decision_engine.py  fii_agent_pipeline.py  fii_ledger.py  fii_loop.py  fii_macro_engine.py  fii_score_analytics.py  fii_sector_meta.py  fii_signal_backtest.py  fii_telegram.py  fire_engine.py  income_engine.py  logger.py  macro_engine.py  (+39 more)
cota_ai/: ai_service.py  dashboard.py  db.py  main.py  news_scraper.py  profile_logic.py
data/: crypto_bot_config.json  cvm_b3_client.py  data_bridge.py  data_loader.py  dividend_calendar.py  fundamentals_scraper.py  fundsexplorer_scraper.py  mercados_client.py  news_scraper.py  refresh_universe.py  sector_enricher.py  (+5 more)
(+316 files in other folders)
