[project]
name = "alphacota"
version = "0.3.0"
description = "Intelligent Portfolio Engine for FIIs — quantitative analysis and AI-powered insights"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--strict-markers -v"
pythonpath = ["."]

[tool.coverage.run]
source = ["core", "services", "data", "api", "infra"]
omit = [
    "scripts/*",
    "cota_ai/*",
    "frontend/*",
    "tests/*",
]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".agent",
    ".venv",
    ".venv-ruff",
    "frontend/node_modules",
    "cota_ai",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function call in argument defaults (FastAPI Depends)
    "RUF001", # ambiguous unicode (PT-BR strings)
    "RUF002", # ambiguous unicode docstrings
    "RUF003", # ambiguous unicode comments
]

[tool.ruff.lint.isort]
known-first-party = ["core", "services", "data", "api", "infra"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ["py311"]
exclude = '''
/(
    \.agent
  | \.venv
  | \.venv-ruff
  | frontend/node_modules
  | cota_ai
)/
'''
